force-app/main/default/objects/Contract_Draft__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the contract that represents the content of this draft</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>R00N50000001QTpgEAG</relationshipName>
    <type>Lookup</type>
</CustomField>